adding pictures and changed from a form to a div

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
   </nav>
   <main>
-    <form id="quiz-list"></form>
+    <div id="quiz-list"></div>
   </main>
 
   <!-- Added link to the jQuery library -->
